# cflpy

./: .gitignore  .travis.yml  LICENSE.rst  MANIFEST.in  README.md  README.rst  build.bat  dev.bat  docker-compose.bat  docker-compose.yml  dockerfile  requirements.txt  setup.cfg  tox.ini
src/: boxscore_columns.py  column_dtypes.py  config.py  create_game_wp_plot.py  download.py  download_history.pkl  download_history.py  file.py  handle_boxscore.py  handle_game_advanced.py  handle_game_basic.py  helper.py  kicking.py  load.py  main.py  main_active_games.py  main_create_wp_plots.py  main_create_wp_plots_top.py  main_loop_update.py  main_missing_games.py  main_reset.py  main_reset_current.py  parse_advanced.py  parse_advanced_boxscore.py  parse_basic.py  postgres.py  query_epa.py  query_model.py  scrape_fantasy.py  store.py  store_advanced.py  store_basic.py  store_drives.py  store_epa.py  store_gei.py  temp.py
src/cflpy/: docker_success.py  main_download.py
src/cflpy/cfldb/: cflconfig.py  (+4 more)
src/download/: download_games.py  download_games_advanced.py  download_helper.py  download_history.py  download_players.py  download_seasons.py  download_standings.py  download_teams.py  download_transactions.py  download_venues.py
src/model/: model_epa.py
src/rank/: rank_elo.py  rank_score.py  rank_season.py  rank_wp.py
src/store/: store_columns.py  store_drives.py  store_elo.py  store_epa.py  store_games.py  store_games_advanced.py  store_gei.py  store_helper.py  store_players.py  store_seasons.py  store_standings.py  store_teams.py  store_transactions.py  store_venues.py
(+10 files in other folders)
