[metadata]
name = cflpy
version = 0.1.1
license = MIT
description = CFL Statistics Package
long_description = file: README.rst
author = Jonathan Hudson
author_email = jonathan.w.hudson@gmail.com

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy

[options.packages.find]
where=src