[metadata]
name = cflpy
version = attr: cflpy.0.1.1
description = CFL Statistics Package
long_description = file: README.rst, LICENSE.rst
keywords = CFL, Football, Statistics
author = Jonathan Hudson
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   pandas
   matplotlib
   seaborn
   scikit-learn

[options.packages.find]
where=src
